--- a/admin/view/template/sale/order_invoice.twig
+++ b/admin/view/template/sale/order_invoice.twig
@@ -10,20 +10,20 @@
 <link href="view/javascript/font-awesome/css/font-awesome.min.css" type="text/css" rel="stylesheet" />
 <link type="text/css" href="view/stylesheet/stylesheet.css" rel="stylesheet" media="all" />
 </head>
-<body>
-<div class="container">
+<body style="width:320px;">
+<div class="container-fluid">
   {% for order in orders %}
   <div style="page-break-after: always;">
-    <h1>{% if order.invoice_no %}{{ text_invoice }} #{{ order.invoice_no }}{% else %}{{ text_order }}{% endif %}</h1>
-    <table class="table table-bordered">
+    <h2>{% if order.invoice_no %}{{ text_invoice }} #{{ order.invoice_no }}{% else %}{{ text_order }}{% endif %}</h2>
+    <table class="table table-borderedless">
       <thead>
         <tr>
-          <td colspan="2">{{ text_order_detail }}</td>
+          <td >{{ text_order_detail }}</td>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td style="width: 50%;"><address>
+          <td><address>
             <strong>{{ order.store_name }}</strong><br/>
             {{ order.store_address }}
             </address>
@@ -32,8 +32,11 @@
             <b>{{ text_fax }}</b> {{ order.store_fax }}<br/>
             {% endif %}
             <b>{{ text_email }}</b> {{ order.store_email }}<br/>
-            <b>{{ text_website }}</b> <a href="{{ order.store_url }}">{{ order.store_url }}</a></td>
-          <td style="width: 50%;"><b>{{ text_date_added }}</b> {{ order.date_added }}<br/>
+            <b>{{ text_website }}</b> <a href="{{ order.store_url }}">{{ order.store_url }}</a>
+            </td>
+          </tr>
+          <tr>
+          <text_date_added><b>{{ text_date_added }}</b> {{ order.date_added }}<br/>
             {% if order.invoice_no %}
             <b>{{ text_invoice_no }}</b> {{ order.invoice_no }}<br/>
             {% endif %}
@@ -45,11 +48,10 @@
         </tr>
       </tbody>
     </table>
-    <table class="table table-bordered">
+    <table class="table table-borderedless">
       <thead>
         <tr>
-          <td style="width: 50%;"><b>{{ text_payment_address }}</b></td>
-          <td style="width: 50%;"><b>{{ text_shipping_address }}</b></td>
+          <td><b>{{ text_payment_address }}</b></td>
         </tr>
       </thead>
       <tbody>
@@ -57,6 +59,17 @@
           <td><address>
             {{ order.payment_address }}
             </address></td>
+        </tr>
+      </tbody>
+    </table>
+    <table class="table table-borderedless">
+      <thead>
+        <tr>
+          <td><b>{{ text_shipping_address }}</b></td>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
           <td><address>
             {{ order.shipping_address }}
             </address></td>
@@ -67,7 +80,6 @@
       <thead>
         <tr>
           <td><b>{{ column_product }}</b></td>
-          <td><b>{{ column_model }}</b></td>
           <td class="text-right"><b>{{ column_quantity }}</b></td>
           <td class="text-right"><b>{{ column_price }}</b></td>
           <td class="text-right"><b>{{ column_total }}</b></td>
@@ -81,7 +93,6 @@
             <br/>
             &nbsp;<small> - {{ option.name }}: {{ option.value }}</small>
             {% endfor %}</td>
-          <td>{{ product.model }}</td>
           <td class="text-right">{{ product.quantity }}</td>
           <td class="text-right">{{ product.price }}</td>
           <td class="text-right">{{ product.total }}</td>
@@ -98,7 +109,7 @@
         {% endfor %}
         {% for total in order.total %}
         <tr>
-          <td class="text-right" colspan="4"><b>{{ total.title }}</b></td>
+          <td class="text-right" colspan="3"><b>{{ total.title }}</b></td>
           <td class="text-right">{{ total.text }}</td>
         </tr>
         {% endfor %}
